<resources>
    <string name="app_name">drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_adoptar">Adoptar</string>
    <string name="menu_inicio_interaz">Inicio Interfaz</string>
    <string name="menu_editar_inicio_interfaz">Editar Inicio Interfaz</string>}
    <string name="menu_comprar_monedas">Comprar Monedas</string>
    <string name="menu_contacto_albergue">Contacto Albergue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="linea_texto_debajo">___________________</string>
</resources>