<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_adopcion"
            android:icon="@drawable/ic_adopcion"
            android:title="@string/menu_adoptar"
            >
        </item>
        <item
            android:id="@+id/nav_inicio_interfaz"
            android:icon="@drawable/ic_adopcion"
            android:title="@string/menu_inicio_interaz"
            >
        </item>
    </group>
</menu>